--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
-click==8.1.3
-colorama==0.4.5
-Flask==2.2.2
-importlib-metadata==4.12.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.1.0
-MarkupSafe==2.1.1
-python-dateutil==2.8.2
-pytz==2022.2.1
-six==1.16.0
-sklearn==0.0
-threadpoolctl==3.1.0
-Werkzeug==2.2.2
-zipp==3.8.1
-gunicorn==20.0.4
-numpy==1.21.6
-pandas==1.3.5
-scikit-learn==0.24.2
-scipy==1.7.3
+click
+colorama
+Flask
+itsdangerous
+Jinja2
+joblib
+MarkupSafe
+numpy
+pandas
+python-dateutil
+pytz
+scikit-learn
+scipy
+six
+threadpoolctl
+Werkzeug
+gunicorn
